interface TweetObserver {
    void notify(Tweet tweet);
}